--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.8.4
   envied: ^1.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
