--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   supabase_flutter: ^2.8.4
   envied: ^1.1.1
   equatable: ^2.0.5
+  go_router: ^14.0.0
 
 dev_dependencies:
   flutter_test:
